fleet/cyclops/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyclops
  labels:
    app: cyclops
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: cyclops
