fleet/cyclops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyclops
  annotations:
    cert-manager.io/cluster-issuer: local-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: cyclops.lan.ping6.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyclops
                port:
                  number: 8080
  tls:
    - hosts:
        - cyclops.lan.ping6.nl
      secretName: tls-cyclops
